cmss/main/default/objects/PensionTransaction__c/PensionTransaction__c.object-meta.xml
<CustomObject>
    <label>Pension Transaction</label>
    <nameField>
        <label>Pension Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pension Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>