cmss/main/default/objects/PensionTransaction__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pension Transactions</relationshipLabel>
    <relationshipName>PensionTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>