cmss/main/default/objects/PensionTransaction__c/fields/CreditedDate__c.field-meta.xml
<CustomField>
    <fullName>CreditedDate__c</fullName>
    <label>Credited Date</label>
    <type>Date</type>
</CustomField>