cmss/main/default/objects/PensionTransaction__c/fields/PaymentCode__c.field-meta.xml
<CustomField>
    <fullName>PaymentCode__c</fullName>
    <label>Payment Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>