cmss/main/default/objects/PensionTransaction__c/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <label>Posting Date</label>
    <type>DateTime</type>
</CustomField>